# TemplateOfCMakeVSCODE

./: CMakeLists.txt  README.md  test.cpp
Student/: student.cpp  student.h
include/: sort.h
src/: sort.cpp
